added html files and map them with their coresponding functions

--- a/templates/app1/base.html
+++ b/templates/app1/base.html
@@ -14,7 +14,7 @@
     </title>
 </head>
 <body>
-    <h1>Employee Management System</h1>
+    <h1 class="alert alert-success">Employee Management System</h1>
     
     {% block content %}
         
