--- a/templates/app1/base.html
+++ b/templates/app1/base.html
@@ -14,11 +14,14 @@
     </title>
 </head>
 <body>
-    <h1 class="alert alert-success">Employee Management System</h1>
-    
-    {% block content %}
+    <div class="container">
+
+        <h1 class="alert alert-success my-5 text-center" >Employee Management System</h1>
         
-    {% endblock content %}
+        {% block content %}
+            
+        {% endblock content %}
+    </div>
         
     
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
