--- a/templates/app1/index.html
+++ b/templates/app1/index.html
@@ -3,5 +3,8 @@
 
 {% block content %}
     <h1>This is homepage</h1>
+    <form action="">
+        {{form.as_p}}
+    </form>
 {% endblock content %}
     
