--- a/templates/app1/update.html
+++ b/templates/app1/update.html
@@ -3,4 +3,9 @@
 
 {% block content %}
     <h1>This is Update page</h1>
+
+    <form action="" method="POST">{% csrf_token %}
+        {{form.as_p}}
+        <input type="submit" value="Submit" class="btn btn-primary" />
+    </form>
 {% endblock content %}
