--- a/templates/app1/update.html
+++ b/templates/app1/update.html
@@ -1,11 +1,20 @@
 {% extends "app1/base.html" %} 
-{% block title %} Update Page {% endblock title %}
+
+{% block title %} Update Employee {% endblock title %}
 
 {% block content %}
-    <h1>This is Update page</h1>
+<div class="container">
+    <h2 class="alert alert-info text-center">Update Employee Information</h2>
 
-    <form action="" method="POST">{% csrf_token %}
-        {{form.as_p}}
-        <input type="submit" value="Submit" class="btn btn-primary" />
-    </form>
+    <div class="row">
+        <div class="col-md-6 offset-md-3">
+            <form action="" method="POST" class="p-4 border rounded bg-light shadow">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit" class="btn btn-success w-100">Update</button>
+                <a href="{% url 'home' %}" class="btn btn-secondary w-100 mt-2">Back to Home</a>
+            </form>
+        </div>
+    </div>
+</div>
 {% endblock content %}
