--- a/templates/app1/base.html
+++ b/templates/app1/base.html
@@ -45,7 +45,7 @@
 
     <!-- Footer -->
     <footer class="bg-dark text-white text-center py-3">
-        <p class="mb-0">© 2025 Employee Management System | All Rights Reserved</p>
+        <p class="mb-0">© 2025 Employee Management System | All Rights Reserved Under Abdullah Nazmus-Sakib | CSE,JU</p>
     </footer>
 
     <!-- Bootstrap JS -->
